# git-mcp-server

./: .gitignore  CONTRIBUTING.md  GITHUB_PROMOTION_STRATEGY.md  LICENSE  README.md  api_integration.py  example_claude_desktop_config_with_uv.json  genai_integration_example.py  git_mcp.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: MCP_CONFIGURATION_GUIDE.md  example_claude_desktop_config.json  example_client.py
tests/: test_git_mcp.py
